# flatten-athena-table

./: .editorconfig  .pre-commit-config.yaml  README.md  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py
flatten/: aws.py  cli.py  create_flat_tmp_table_parquet.sql  hive_grammar.lark  hive_parser.py  utils.py
tests/: glue_table.json  glue_table_duplicate_column.json  test.py  test_glue.py  test_hive_parser.py
