[metadata]
name = flatten-athena-table
# Version needs regex in setup.py.
url = https://github.com/skuroq/flatten-athena-table/
project_urls =
    Documentation = https://github.com/skuroq/flatten-athena-table/
    Code = https://github.com/skuroq/flatten-athena-table/
    Issue tracker = https://github.com/skuroq/flatten-athena-table/
author = skuro
author_email = mail@skuro.org

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
    # do not call function in arguments - typer needs this
    B008
max-line-length = 120
